<resources>
    <string name="app_name">Solar Self</string>
    <string name="action_settings">Settings</string>
    <string name="value_none">---</string>

    <!-- Fragments Title -->
    <string name="register_fragment_label">Dados da API</string>
    <string name="data_fragment_label">Dados da Estação</string>
    <string name="config_fragment_label">Configuração</string>

    <!-- Actions -->
    <string name="ok">OK</string>
    <string name="previous">Previous</string>
    <string name="cancel">Cancelar</string>
    <string name="select">Selecionar</string>
    <string name="logoff">Deslogar</string>

    <!-- Fields Validation -->
    <string name="invalid_field">Campo inválido</string>
    <string name="required_field">Campo obrigatório</string>
    <string name="value_is_not_url">O campo deve ser uma URL</string>

    <!-- No station Configured -->
    <string name="no_station_configured_sad_icon">☹</string>
    <string name="no_station_configured_text">
        Nenhuma estação configurada para o monitoramento.\n
        Vá até as configurações ⚙ e selecione uma estação para visualizar seus dados
    </string>

    <!-- Register Screen -->
    <string name="api_url">Url da API</string>
    <string name="api_key">ID da API</string>
    <string name="api_secret">Chave da API</string>
    <string name="enter">Entrar</string>

    <!-- Config Screen -->
    <string name="config_screen_monitoring">Monitoramento</string>
    <string name="config_screen_logout_error">Erro ao fazer logout. Tente novamente.</string>
    <string name="config_screen_monitored_station">Estação monitorada</string>
    <string name="config_screen_station_monitored_updated">Configuração salva</string>
    <string name="config_screen_station_monitored_error">Erro ao salvar a configuração</string>
    <string name="config_screen_logoff_alert">Você realmente quer apagar seus dados de login e sair do monitoramento?</string>
    <string name="config_screen_period_monitoring">Período</string>
    <string name="config_screen_period_initial_date">Data inicial</string>
    <string name="config_screen_period_final_date">Data final</string>
    <string name="config_screen_period_auto_update">Atualizar datas automaticamente ao final do período</string>
    <string name="config_screen_period_start_date_invalid">A data inicial do período está inválida</string>
    <string name="config_screen_period_end_date_invalid">A data final do período está inválida</string>
    <string name="config_screen_period_save_success">Período salvo com sucesso</string>
    <string name="config_screen_period_save_error">Falha ao salver período</string>
    <string name="config_screen_period_clear_success">Período removido com sucesso</string>
    <string name="config_screen_period_clear_error">Não foi possível limpar o período</string>

    <!-- Data Screen -->
    <string name="data_screen_close_app">Pressione novamente para fechar o app</string>

    <!-- Charge -->
    <string name="total_charge">Total:</string>
    <string name="average_charge">Média:</string>
    <string name="kwh">Kwh</string>

    <!-- Monthly charge -->
    <string name="monthly_charge">Mensal</string>
    <string name="monthly_charge_chart_title">Detalhes do mês %s</string>

    <!-- Period charge -->
    <string name="period_charge">Período</string>
    <string name="period_charge_chart_title" formatted="false">Detalhes do período de %s à %s</string>
    <string name="period_charge_chart_tooltip">Gerado: &lt;b&gt;{point.y} Kwh&lt;/b&gt;</string>

    <!-- Realtime charge card -->
    <string name="real_time_charge_title">Carga atual</string>
    <string name="real_time_charge">Carga:</string>
    <string name="real_time_charge_power">Potência:</string>

    <!-- Month year dialog -->
    <string name="dialog_month_year_title">Selecione o mês referente</string>
    <string-array name="month_list">
        <item>Jan</item>
        <item>Fev</item>
        <item>Mar</item>
        <item>Abr</item>
        <item>Mai</item>
        <item>Jun</item>
        <item>Jul</item>
        <item>Ago</item>
        <item>Set</item>
        <item>Out</item>
        <item>Nov</item>
        <item>Dez</item>
    </string-array>

</resources>