<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/FragmentSplashScreen">

    <fragment
        android:id="@+id/FragmentSplashScreen"
        android:name="com.gma.solarself.view.SplashScreenFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_splash_screen">
        <action
            android:id="@+id/action_Splash_To_Register"
            app:destination="@id/FragmentRegister" />
        <action
            android:id="@+id/action_Splash_To_Data"
            app:destination="@id/FragmentData" />
    </fragment>

    <fragment
        android:id="@+id/FragmentRegister"
        android:name="com.gma.solarself.view.RegisterFragment"
        android:label="@string/register_fragment_label"
        tools:layout="@layout/fragment_register">

        <action
            android:id="@+id/action_Register_To_Data"
            app:destination="@id/FragmentData" />
    </fragment>
    <fragment
        android:id="@+id/FragmentData"
        android:name="com.gma.solarself.view.DataFragment"
        android:label="@string/data_fragment_label"
        tools:layout="@layout/fragment_data">

    </fragment>
</navigation>