<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.RegisterFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/sizeSmall"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.gma.solarself.view.components.CustomTextInputEditText
            android:id="@+id/api_url_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:startIconDrawable="@drawable/outline_link_24"
            app:hint="@string/api_url"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <com.gma.solarself.view.components.CustomTextInputEditText
            android:id="@+id/key_id_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/sizeSmall"
            app:startIconDrawable="@drawable/outline_key_24"
            app:hint="@string/api_key"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/api_url_input"/>

        <com.gma.solarself.view.components.CustomTextInputEditText
            android:id="@+id/key_secret_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/sizeSmall"
            app:startIconDrawable="@drawable/outline_key_off_24"
            app:hint="@string/api_secret"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/key_id_input"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_first"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/primaryButton"
            android:layout_marginTop="@dimen/sizeStandart"
            android:text="@string/enter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/key_secret_input" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <include
        android:id="@+id/loading"
        layout="@layout/loading"/>

</androidx.constraintlayout.widget.ConstraintLayout>